--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <button type="submit">Search</button>
           </form>
 
-          <img class="login" src="/img/mdi_user.png" alt="" />
-          <img class="shoppingcart" src="/img/ion_cart.png" alt="" />
+          <img class="login" src="img/mdi_user.png" alt="" />
+          <img class="shoppingcart" src="img/ion_cart.png" alt="" />
         </div>
       </header>
 
@@ -130,6 +130,10 @@
         </div>
       </div>
 
+      <div class="subSection2">
+        <h2>Part of a Collection</h2>
+      </div>
+
       <!-- Section 2 -->
 
       <div class="section2">
@@ -138,7 +142,7 @@
           <p>Lorem ipsum dolor sit amet consectetur. Viverra</p>
           <div class="collectionAddToCart">
             <p>$399.00</p>
-            <button type="button" class="addToCartButton">Add to Cart</button>
+            <button type="button" class="s2AddToCartButton">Add to Cart</button>
           </div>
         </div>
         <div class="collectionCards">
@@ -146,7 +150,7 @@
           <p>Lorem ipsum dolor sit amet consectetur. Viverra</p>
           <div class="collectionAddToCart">
             <p>$399.00</p>
-            <button type="button" class="addToCartButton">Add to Cart</button>
+            <button type="button" class="s2AddToCartButton">Add to Cart</button>
           </div>
         </div>
         <div class="collectionCards">
@@ -154,7 +158,7 @@
           <p>Lorem ipsum dolor sit amet consectetur. Viverra</p>
           <div class="collectionAddToCart">
             <p>$399.00</p>
-            <button type="button" class="addToCartButton">Add to Cart</button>
+            <button type="button" class="s2AddToCartButton">Add to Cart</button>
           </div>
         </div>
         <div class="collectionCards">
@@ -162,7 +166,7 @@
           <p>Lorem ipsum dolor sit amet consectetur. Viverra</p>
           <div class="collectionAddToCart">
             <p>$399.00</p>
-            <button type="button" class="addToCartButton">Add to Cart</button>
+            <button type="button" class="s2AddToCartButton">Add to Cart</button>
           </div>
         </div>
       </div>
