--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
       <div class="section2">
         <div class="collectionCards">
-          <img src="/img/rectangle5.png" alt="" />
+          <img src="img/rectangle5.png" alt="" />
           <p>Lorem ipsum dolor sit amet consectetur. Viverra</p>
           <div class="collectionAddToCart">
             <p>$399.00</p>
@@ -146,7 +146,7 @@
           </div>
         </div>
         <div class="collectionCards">
-          <img src="/img/rectangle5.png" alt="" />
+          <img src="img/rectangle5.png" alt="" />
           <p>Lorem ipsum dolor sit amet consectetur. Viverra</p>
           <div class="collectionAddToCart">
             <p>$399.00</p>
@@ -154,7 +154,7 @@
           </div>
         </div>
         <div class="collectionCards">
-          <img src="/img/rectangle5.png" alt="" />
+          <img src="img/rectangle5.png" alt="" />
           <p>Lorem ipsum dolor sit amet consectetur. Viverra</p>
           <div class="collectionAddToCart">
             <p>$399.00</p>
@@ -162,7 +162,7 @@
           </div>
         </div>
         <div class="collectionCards">
-          <img src="/img/rectangle5.png" alt="" />
+          <img src="img/rectangle5.png" alt="" />
           <p>Lorem ipsum dolor sit amet consectetur. Viverra</p>
           <div class="collectionAddToCart">
             <p>$399.00</p>
