--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
           </div>
         </div>
         <div class="rightsection">
-          <img class="rightSectionImage" src="/img/Rectangle 2.png" alt="" />
-          <img class="rightSectionImage" src="/img/Rectangle 3.png" alt="" />
-          <img class="rightSectionImage" src="/img/Rectangle 4.png" alt="" />
+          <img class="rightSectionImage" src="img/Rectangle 2.png" alt="" />
+          <img class="rightSectionImage" src="img/Rectangle 3.png" alt="" />
+          <img class="rightSectionImage" src="img/Rectangle 4.png" alt="" />
         </div>
       </div>
 
