--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       <!-- Subheader -->
       <div class="subHeader">
         <p>LIMITED TIME ONY: 2X REWARDS*</p>
-        <p>UP TO 30% OFF TOP-SELLING FURNITURE</p>
-        <p>1500+ NEW FALL ARRIVALS</p>
-        <p>100% FREE DESIGN HELP</p>
+        <p class="subHeaderP">UP TO 30% OFF TOP-SELLING FURNITURE</p>
+        <p class="subHeaderP">1500+ NEW FALL ARRIVALS</p>
+        <p class="subHeaderP">100% FREE DESIGN HELP</p>
       </div>
 
       <!-- Section 1 -->
