--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
           <!-- Dropdown Menu -->
           <ul class="dropdown">
             <li>Ashley Lifestyle</li>
-            <li>Price</li>
-            <li>Size (width)</li>
-            <li>Color</li>
-            <li>Design</li>
+            <li class="dropdownLi">Price</li>
+            <li class="dropdownLi">Size (width)</li>
+            <li class="dropdownLi">Color</li>
+            <li class="dropdownLi">Design</li>
           </ul>
           <!-- 
           <div class="dropdown">
